# agent-heart

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/pipelines/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml  reusable-build.yml  stage-build.yml  stage-release-publish.yml  stage-test.yml
agent-heart/: Cargo.toml
agent-heart/src/: brain_client.rs  config.rs  finetune.rs  lib.rs  lint.rs  main.rs  mcp_server.rs  scheduler.rs  serve.rs  spine.rs  token_budget.rs  update.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
