[package]
name = "agent-heart"
version = "0.7.1"
edition = "2021"

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body" }
anyhow = "1"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.1", features = ["server", "client", "transport-io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
